<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <action
        android:id="@+id/action_global_login"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="false"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_verify_email"
        app:destination="@id/verifyEmailFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="false"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_home"
        app:destination="@id/homeFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="false"
        app:launchSingleTop="true" />

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.hisabkitab.ui.splash.SplashFragment"
        android:label="@string/app_name" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.hisabkitab.ui.auth.LoginFragment"
        android:label="@string/login_button">
        <action
            android:id="@+id/action_login_to_signup"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_login_to_forgot_password"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_login_to_phone"
            app:destination="@id/phoneFragment" />
    </fragment>
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.hisabkitab.ui.auth.SignupFragment"
        android:label="@string/signup_title">
        <action
            android:id="@+id/action_signup_to_verify_email"
            app:destination="@id/verifyEmailFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/verifyEmailFragment"
        android:name="com.example.hisabkitab.ui.auth.VerifyEmailFragment"
        android:label="@string/verify_email_title">
        <action
            android:id="@+id/action_verify_email_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/verifyEmailFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.hisabkitab.ui.auth.ForgotPasswordFragment"
        android:label="@string/forgot_title" />
    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.example.hisabkitab.ui.auth.PhoneFragment"
        android:label="@string/phone_title">
        <action
            android:id="@+id/action_phone_to_otp"
            app:destination="@id/otpFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/otpFragment"
        android:name="com.example.hisabkitab.ui.auth.OtpFragment"
        android:label="@string/otp_title">
        <action
            android:id="@+id/action_otp_to_phone"
            app:destination="@id/phoneFragment"
            app:popUpTo="@id/phoneFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.hisabkitab.ui.home.HomeFragment"
        android:label="@string/app_name" />
</navigation>
